--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,13 @@
 body {
-	background-color: #FFFFFF;
-	color: #121318;
-	font-family: sans-serif;
+  background-color: #ffffff;
+  color: #121318;
+  font-family: sans-serif;
+  margin: 0;
+}
+
+img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  display: block;
 }
