--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,15 @@
 body {
   background-color: #ffffff;
   color: #121318;
-  font-family: sans-serif;
+  font: 300 16px / 1.75 Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI,
+    Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   margin: 0;
 }
 
-img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  display: block;
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("../fonts/Proxima Nova Bold.otf") format("opentype");
+  font-weight: bold;
+  font-style: normal;
 }
