--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,50 +1,179 @@
 .hero {
+  position: relative;
+  clip-path: inset(0);
   margin: 0;
-  background-color: #0f2542;
+  background-color: #222328;
+  background: linear-gradient(#222328, #121318);
   color: #ffffff;
   width: 100%;
   height: 100vh;
 }
 
-.hero .hero-card-container {
+.hero canvas#hero-animation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.hero .hero-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 55px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 40px;
+}
+
+@keyframes shine {
+  0% {
+    background-position-x: -150px;
+  }
+
+  50%,
+  100% {
+    background-position-x: 150px;
+  }
+}
+
+.hero .hero-header .shiny-stuff {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(
+    143deg,
+    rgba(0, 0, 0, 0) 43%,
+    #fffa,
+    rgba(0, 0, 0, 0) 57%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #0000;
+  background-position-x: -150px;
+  background-repeat: no-repeat;
+  animation: shine 6s ease-in-out infinite;
+  pointer-events: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.hero .hero-header .named-logo {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  opacity: 0;
+  animation: slide-up 1.2s ease-in-out forwards;
+}
+
+.hero .hero-header .named-logo div {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Open Sans";
+  color: #797c85;
+}
+
+.hero .hero-header .named-logo img {
+  width: 36px;
+  height: 36px;
+  display: none;
+}
+
+.hero .hero-component-container {
   width: 100%;
   height: 100%;
   max-width: 1020px;
   margin: 0 auto;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  color: #eeffffee;
+}
+
+.hero .hero-card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  /* height: 100%; */
   column-gap: 16px;
 }
 
-.hero .delayed-floater {
+.hero .snippet {
   display: flex;
   flex-flow: column;
   align-items: center;
   opacity: 0;
-  animation: slide-up 0.9s 0s ease-in-out forwards;
-  width: 320px;
+  animation: slide-up 1s ease-in-out forwards;
+  width: 300px;
   text-align: center;
 }
 
-.hero .delayed-floater h1 {
-  font-size: 28px;
-  font-family: "Proxima Nova";
+.hero .snippet h2 {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+  color: #bb8c0b;
 }
 
-.hero .delayed-floater h2 {
-  font-size: 24px;
-  font-family: "Proxima Nova";
-  /* color: #bb8c0b; */
+.hero .snippet p {
+  font-size: 15px;
+  margin: 0;
+  line-height: 1.8;
 }
 
-.hero .delayed-floater img {
-  width: 128px;
-  height: 128px;
-  display: block;
+.hero .snippet:nth-child(1) {
+  animation-delay: 1s;
 }
 
-.hero .delayed-floater.button-container {
+.hero .snippet:nth-child(2) {
+  animation-delay: 1.5s;
+}
+
+.hero .snippet:nth-child(3) {
   animation-delay: 2s;
+}
+
+.hero .snippet.button-container {
+  animation-delay: 2.5s;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  column-gap: 16px;
+  margin-top: 32px;
+}
+
+.hero .snippet.button-container button {
+  border: 1px solid #eeffffee;
+  outline: none;
+  box-shadow: 0;
+  background-color: #0000;
+  -webkit-appearance: none;
+  appearance: none;
+  font: inherit;
+  padding: 0.75rem 0;
+  color: #eeffffee;
+  border-radius: 4px;
+  font-size: 15px;
+  line-height: 1;
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
+  width: 150px;
+  box-sizing: border-box;
+}
+
+.hero .snippet.button-container button:hover {
+  background-color: #eeffffee;
+  color: #121318;
 }
 
 @keyframes slide-up {
