--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -35,6 +35,8 @@
   opacity: 0;
   animation: slide-up 1.2s ease-in-out forwards;
   height: 36px;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .hero .hero-component-container {
@@ -103,7 +105,8 @@
   margin-top: 32px;
 }
 
-.hero .snippet.button-container button {
+.hero .snippet.button-container a {
+  text-decoration: none;
   border: 1px solid #eeffffee;
   outline: none;
   box-shadow: 0;
@@ -122,7 +125,7 @@
   box-sizing: border-box;
 }
 
-.hero .snippet.button-container button:hover {
+.hero .snippet.button-container a:hover {
   background-color: #eeffffee;
   color: #121318;
 }
